adição de testes de sistema mais helpers usando swing